Fix background color on smaller screens and dark mode

--- a/src/theme/default/theme.css
+++ b/src/theme/default/theme.css
@@ -116,7 +116,7 @@ main .highfive .counter-animation.animating {
 }
 
 .tile {
-  @apply h-full border-2 border-gray-200 dark:border-gray-800 border-opacity-60 rounded-lg overflow-hidden flex flex-col;
+  @apply h-full border-2 border-gray-200 dark:border-gray-800 border-opacity-60 rounded-lg overflow-hidden flex flex-col dark:bg-white;
 }
 
 .tile > a > img {
